--- a/finlib-frontend/src/style.css
+++ b/finlib-frontend/src/style.css
@@ -52,6 +52,14 @@ body {
   max-width: 600px;
 }
 
+.onboarding h2 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  color: #3a4850;
+}
+
 .onboarding p {
   margin-bottom: 20px;
   font-size: 1.1rem;
@@ -91,11 +99,11 @@ body {
 }
 
 .section-label {
-  font-size: 1.1rem;
+  font-size: 1.05rem;
   font-weight: 600;
   color: var(--text);
-  margin-bottom: 16px;
-  text-align: left;
+  margin-bottom: 10px;
+  text-align: center;
   width: 100%;
 }
 
